	  utilizes the feature). (Thanks to Mauro Sérgio Ferreira Brasil,
	  Marcus Lundblad, Jorge Villaseñor and other contributors)
	* Add a configure option, --with-system-ssl-certs to allow packagers
	  to specify a system-wide SSL CA certificates directory.  When set,
	  we don't install our SSL CA certs, so it's important that the
	  libpurple package depend on the CA certificates.

	MSN:
	* Update MSN support to protocol 15 (Elliott Sales de Andrade, Jorge
	  Villaseñor, Mike Ruprecht, Carlos Silva, Ma Yuan, Daniel Ljungborg
	  and others)
	* Personal messages are now supported. They are treated as status
	  messages.
	* Offline IM is now supported.
	* Aliasing is now supported server-side.
	* Buddies are now emblemed. Bots and web clients should now be
	  distinguished.
	* Failing to update a buddy icon when the buddy has gone offline no
	  longer crashes.
	* Custom smileys received in a chat no longer go to a new window.
	* Processing is no longer completely frozen after the servers block a
	  message because it contains (what they consider) inappropriate text.

	Pidgin:
	* Custom buddy icons can now be added to and removed from buddy list
	  entries via the buddy list entry right-click menu.
	* Resize large incoming custom smileys to a maximum of 96px on either
	  side.
	* Offer to add new buddies into the same contact as existing buddies
	  in the same group if the alias given is the same.

	General:
	* Group and Chat buddy list entries can now be given custom buddy
	  icons.

	Finch:
	* Added "Invite..." menu to chats.
	* Added "View All Logs" menu in the buddylist to display a list of all IM
	  logs.
	* Added '/msgcolor' command to change colors of different classes of
	  messages in a conversation. See '/help msgcolor' for details.
	* Added tab-completion for commands in conversation windows.

version 2.4.3 (07/01/2008):
	libpurple:
	* Yahoo! Japan now uses UTF-8, matching the behavior of official clients